# capp-connect

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.expo/: settings.json
.github/: pull_request_template.md
.github/workflows/: format-and-fail.yml  run-tests.yml
capp-connect/: config.py
capp-connect/backend/: .env.example  manage.py
capp-connect/backend/authentication/: adapters.py  cert.crt  get_channel_history.py  get_replies.py  get_slack_channels.py  models.py  views.py
capp-connect/backend/ccserver/: apps.py  events_data.csv  eventtag_data.csv  fake_data2.json  fake_data3.json  models.py  posts_data.json  posttag_data.csv  profiletag_data.csv  profiletag_data.json  projects_data.csv  projecttag_data.csv  projecttag_data.json  serializers.py  tags_data.json  tests.py  users_data.csv  views.py
capp-connect/backend/connect/: asgi.py  settings.py  urls.py  wsgi.py
capp-connect/frontend/: README.md  app.json  eslint.config.mjs  gregwashere.txt  metro.config.js  package-lock.json  package.json  tsconfig.json
capp-connect/frontend/app/: 405.tsx  _layout.tsx  (+7 more)
capp-connect/slack_auth/: .env.example  app.py  config.py  oauth.py
capp_connect/: config.py
capp_connect/frontend/: package-lock.json  package.json
docs/: architecture.md  data_privacy.md  database_access.md  endpoints.md  ms4_models.md
docs/endpoints/: general.md  other.md  posts.md  profiles.md  summarize.md  user_info.md
docs/frontend/: README.md
tests/: test_example.py
(+154 files in other folders)
