[project]
name = "capp-connect"
version = "0.1.0"
description = "This is the repository for Spring 2025 CAPP Connect Project"
authors = ["bentoviml"]
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "cryptography>=44.0.3",
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "faker>=37.1.0",
    "pre-commit>=4.0.1",
    "psycopg>=3.2.7",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "responses>=0.25.3",
    "tree>=0.2.4",
]
